--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 url: 'http://localhost/minimal'
 name: minimal
 description: ''
+title: Ola's Website
+email: hejaziula@gmail.com
+baseurl: "/test_minimal" # the subpath of your site, e.g. /blog
+url: "https://OlaHejazi.github.io" # the base hostname & protocol for your site.
